css/styles.css
/*
-----------------------------------------------
Theme: Max - Landing Page
Version 1.0
Author: okthemess
-----------------------------------------------
1) Global CSS
2) Top Navigation Bar
3) Home Section
4) About us section
5) Work Section
6) Customer Say Section / Testimonials
7) Numbers Section
8) Meet The Team Section
9) Skills or Experties Section
10) Packages or Purchases Section
11) Blue Slider Section
12) Blog Section
13) MAP Section
14) Contact Section
15) Footer Section
16) Creative Works/Portfolio Section
17) Responsive
-----------------------------------------------
*/
/*
-----------------------------------------------
	1) Global CSS
-----------------------------------------------
*/
html,
body {
  /*width: 100%;
	height: 100%;*/
  margin: 0px;
  font-size: 16px;
  padding: 0px;
  overflow-x: hidden;
  *padding-top: 30px;
}

.h4,
h4 {
  font-size: 20px;
}

.center {
  text-align: center;
}

#max-aboutus-section .max-section-title {
  margin: 0 auto;
  max-width: 75%;
  padding: 0;
}

.max-section-title {
  text-align: center;
  text-transform: uppercase;
  color: #ba385c;
  font-family: 'Open Sans', sans-serif;
  *border-bottom: 1px solid #363636;
  font-size: 18px;
  padding: 30px 0;
}

.single .img {
  width: 300px;
  height: auto;
}

.single .img img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

img {
  max-width: 100%;
}

.block {
  display: block;
}

.none {
  display: none !important;
}

/*
-----------------------------------------------
	2) Top Navigation bar
-----------------------------------------------
*/
.navbar-default {
  background-color: transparent;
  border-color: transparent;
  max-width: 1170px;
  margin: 0 auto;
}

.navbar-default .navbar-brand {
  color: #fff !important;
}

.navbar-default .navbar-nav>li>a {
  color: #363636 !important;
  text-transform: uppercase;
  font-size: 13px;
  font-weight: 600;
}

.number a {
  color: #363636 !important;
}

#max-footer .number a {
  color: #fff !important;
}

.navbar-default .navbar-nav>li>a:focus,
.navbar-default .navbar-nav>li>a:hover {
  /*color: #00b3e4 !important;*/
  background-color: transparent;
}

.nav>li>a {
  padding: 15px 8px;
}

/*.navbar-nav {
    margin-left: 37px;
}*/
.navbar-brand img {
  margin-top: -9px;
  *margin-left: 15px;
  height: 35px;
}

.nav.navbar .navbar-default {
  max-width: 1170px;
  margin: 0 auto;
}

.navbar-header {
  float: left;
  width: 22%;
}

.navbar-nav {
  float: left;
  margin: 0;
  width: 53%;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 999;
}

header.sticky {
  background: #fff;
  height: 50px;
  line-height: 50px;
  width: 100%;
  color: #363636 !important;
  transition: 0.5s ease;
}

header.sticky .navbar-default .navbar-nav>li>a {
  color: #363636 !important;
  background: transparent !important;
}

header.sticky .navbar-default .navbar-nav>li>a:hover {
  /*color: #00b3e4 !important;*/
}

header.sticky .navbar-default .navbar-brand {
  color: #363636 !important;
}

.header-right-area,
.header-right-area-mobile {
  float: right;
  display: flex;
  align-items: center;
}

/* BUGFIX: bootstrap.min.css was upgraded to v5 and no longer ships the
   Bootstrap 3 ".hidden-xs/.hidden-sm/.hidden-md/.hidden-lg" helpers that the
   markup still relies on (header.php, footer.php, single_product_template.php).
   Without these rules BOTH the desktop and mobile header blocks (phone +
   social icons) render at the same time on every screen size, which is why
   the socials appeared duplicated/detached ("hang in the air") between
   768px and 992px. Breakpoints match the original Bootstrap 3 grid. */
@media (max-width: 767.98px) {

  .hidden-xs {
    display: none !important;
  }
}

@media (min-width: 768px) and (max-width: 991.98px) {

  .hidden-sm {
    display: none !important;
  }
}

@media (min-width: 992px) and (max-width: 1199.98px) {

  .hidden-md {
    display: none !important;
  }
}

@media (min-width: 1200px) {

  .hidden-lg {
    display: none !important;
  }
}

header.sticky .navbar-default .cart {
  color: #363636 !important;
  font-weight: 600;
  display: inline-flex;
  align-items: center;
  cursor: pointer;
  margin-left: 10px;
}

header.navbar-default .cart {
  display: inline-flex;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  position: relative;
}

header.navbar-default .cart img {
  width: 25px;
  height: 25px;
  vertical-align: middle;
}

.basket_logo {
  width: 30px;
  height: 30px;
}

header.navbar-default .cart span {
  background: #ba385c;
  color: white;
  border-radius: 50%;
  width: 18px;
  height: 18px;
  display: inline-block;
  text-align: center;
  line-height: 18px;
  font-size: 10px;
  font-weight: bold;
  position: absolute;
  top: -8px;
  right: -8px;
}

header.sticky .navbar-default .number {
  color: #363636 !important;
  font-weight: 600;
  padding: 0;
  display: flex;
  align-items: center;
  height: 50px;
  margin: 0;
}

header.sticky .navbar-default .number a {
  display: flex;
  align-items: center;
}

/* header.sticky .navbar-default .number .whatsapp {
  width: 25px;
  height: 25px;
  margin-left: 10px;
} */
.social {
  width: 25px;
  height: 25px;
  margin-left: 6px;
  margin-top: 0 !important;

}

/*
-----------------------------------------------
	3) Home Section
-----------------------------------------------
*/

/*
-----------------------------------------------
	4) About us Section
-----------------------------------------------
*/
#aboutus-section {
  padding-right: 20px;
  *padding-bottom: 20px;
  text-align: center;
}

#aboutus-section p {
  color: #363636;
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  line-height: 24px;
}

#max-featured-section {
  width: 100%;
}

.max-feature-section-list .row {
  display: flex !important;
}

.max-feature-section-list.odd .img_lg {
  order: 2;
}

.max-feature-section-list {
  min-height: 400px;
  display: flex;
  width: 100%;
  justify-content: center;
  padding-left: 0 !important;
  padding-right: 0 !important;
}
/* ... */

